# FORGE

./: .gitignore  LICENSE  README.md  RESEARCH_LOG.md  index.html  pyproject.toml  requirements.txt  researcher.html  results.json
.github/workflows/: test.yml
assets/: og-card.html
configs/: mode_full.json  mode_nano.json  mode_quick.json  mode_standard.json
docs/: GITHUB_PAGE.md
forge/: __init__.py  cli.py  server.py  ui.py
forge/categories/: __init__.py  algebra_groups.py  algorithmic_trace.py  arithmetic_chain.py  boolean_kmap.py  chess_mate.py  combinatorics_stars.py  crypto_rsa.py  diff_eq_rlc.py  diophantine.py  finance_math.py  formal_grammars.py  game_nim.py  geo_polygon.py  graph_shortest_path.py  info_entropy.py  jordan_normal.py  linear_systems.py  matrix_det.py  mod_exp.py  polynomial_roots.py  prob_bayes.py  quantum_amplitudes.py  signal_dft.py  taylor_series.py  vector_div.py
forge/core/: __init__.py  generator.py  grader.py  runner.py  state.py
tests/: README.md  conftest.py  generate_snapshot.py  test_edge_cases.py  test_generation.py  test_grader.py  test_grading.py  test_performance.py  test_reproducibility.py  test_runner.py
tests/fixtures/: snapshot_seed42.json
