[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forge-benchmark"
version = "0.1.0"
description = "FORGE: Formally Generated Reasoning Evaluation - Testing Understanding Over Interpolation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "FORGE Contributors"},
]
keywords = ["llm-evaluation", "benchmark", "mechanistic-interpretability", "procedural-generation", "symbolic-math", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
    "scipy>=1.11",
    "python-chess>=1.999",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "gradio>=4.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/forge-benchmark"
Repository = "https://github.com/yourusername/forge-benchmark"
Issues = "https://github.com/yourusername/forge-benchmark/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
forge = "forge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
